@@ -1,8 +1,9 @@
 = GarrisonCommander helps you when choosing the right follower for the right mission =
 * 2.1.1
 Feature: Countered mechanics are now shown in standard mission button both in big and small screen mode
+Feature: New sort method: mission age
 Fix: Changed key for "skip auto fill" from shift to ctrl. Now it works
-Fix: In mission page, counter ability were not show in follower icon
+Fix: In mission page, counter ability were not shown in follower icon
 * 2.1.0
 Feature: new layout is now optional, you can revert to 1.1.8 leayout disabling "big screen"
 Feature: Mission page autopopulation is now optional
